RestServiceInfo: fix Java 17 code uses in RestServiceInfo